[package]
name = "slot_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = {version="0.12.2",features = ["client", "gateway", "rustls_backend", "model"]}
futures-util = {version = "0.3.30", features = ["sink","io"]}
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
reqwest = {version="0.12.5", features=["json"]}

