[package]
name = "slot_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { version = "0.10.2", features = ["tls"] }
tonic-build = "0.10.2"
serenity = {version="0.11.7",features = ["client", "gateway", "rustls_backend", "model"]}
futures-util = {version = "0.3.30", features = ["sink","io"]}
serde = { version = "1.0", features = ["derive"] }
reqwest = {version="0.11.27", features=["json"]}
jito-geyser-protos = { git= "https://github.com/jito-foundation/geyser-grpc-plugin", tag= "v1.18.1" }
